# photo-of-the-day

./: .gitignore  CMakeLists.txt  README
applet/: CMakeLists.txt
applet/package/: metadata.desktop
applet/package/contents/config/: config.qml  main.xml
applet/package/contents/ui/: ButtonBar.qml  ConfigureView.qml  ErrorLabel.qml  ImageEffect.qml  ImageProvider.qml  PotdProvider.qml  SlideshowProvider.qml  configContent.qml  configGeneral.qml  configImage.qml  configProviders.qml  configSlideshow.qml  main.qml
applet/plugin/: CMakeLists.txt  imagemodel.cpp  imagemodel.h  photoofthedayplugin.cpp  photoofthedayplugin.h  providersmodel.cpp  providersmodel.h  qmldir  shadowimageprovider.cpp  shadowimageprovider.h  slideshowmodel.cpp  slideshowmodel.h
dataengine/: CMakeLists.txt  cachemanager.cpp  cachemanager.h  photooftheday-provider.desktop  photooftheday.cpp  photooftheday.h  plasma-dataengine-photooftheday.desktop  potddatacontainer.cpp  potddatacontainer.h  providercore.cpp  providercore.h
dataengine/providers/: CMakeLists.txt  apod.cpp  apod.h  bonjourmadame.cpp  bonjourmadame.h  earthshots.cpp  earthshots.h  interfacelift.cpp  interfacelift.h  natgeo.cpp  natgeo.h  photooftheday-provider-apod.desktop  photooftheday-provider-bonjourmadame.desktop  photooftheday-provider-earthshots.desktop  photooftheday-provider-interfacelift.desktop  photooftheday-provider-natgeo.desktop  photooftheday-provider-stevesdigicams.desktop  stevesdigicams.cpp  stevesdigicams.h
